Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8022316/CompilerErrorGenericThrowPlusMethodRefTest.out
CompilerErrorGenericThrowPlusMethodRefTest.java:30:26: compiler.err.unreported.exception.need.to.catch.or.throw: java.lang.Exception
1 error
